tests/baselines/reference/typeArgumentsWithStringLiteralTypes01.errors.txt
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(4,18): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(37,25): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(38,25): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(39,25): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(40,25): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(41,25): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(44,30): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'string' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(45,30): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'string' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(46,30): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'string' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(47,30): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'string' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(48,30): error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'string' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(54,20): error TS2365: Operator '<' cannot be applied to types '<T>(x: T, y: T) => T' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(54,20): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(55,20): error TS2365: Operator '<' cannot be applied to types '<T>(x: T, y: T) => T' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(55,20): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(56,20): error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(56,34): error TS1134: Variable declaration expected.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(57,20): error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(57,34): error TS1134: Variable declaration expected.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(58,20): error TS2365: Operator '<' cannot be applied to types '<T>(...args: T[]) => T' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(58,20): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(61,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(62,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(63,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(64,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(65,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(68,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(69,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(70,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(71,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(72,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(75,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(76,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(77,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(78,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(79,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(86,20): error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(86,34): error TS1134: Variable declaration expected.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(87,20): error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(87,34): error TS1134: Variable declaration expected.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(88,20): error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(88,34): error TS1134: Variable declaration expected.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(89,20): error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(89,34): error TS1134: Variable declaration expected.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(90,20): error TS2365: Operator '<' cannot be applied to types '<T>(...args: T[]) => T' and 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(90,20): error TS2447: The '|' operator is not allowed for boolean types. Consider using '||' instead.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(93,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(94,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(95,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(96,26): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(97,26): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(100,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(101,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(102,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(103,25): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(104,25): error TS2345: Argument of type 'number' is not assignable to parameter of type '"Hello"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(107,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(108,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(109,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(110,30): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'boolean' is not assignable to type '"World"'.
tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts(111,30): error TS2345: Argument of type 'number' is not assignable to parameter of type '"Hello" | "World"'.
  Type 'number' is not assignable to type '"World"'.


==== tests/cases/conformance/types/stringLiteral/typeArgumentsWithStringLiteralTypes01.ts (61 errors) ====
    
    declare function randBool(): boolean;
    declare function takeReturnString(str: string): string;
    declare function takeReturnHello(str: "Hello"): "Hello";
                     ~~~~~~~~~~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    declare function takeReturnHelloWorld(str: "Hello" | "World"): "Hello" | "World";
    
    function fun1<T>(x: T, y: T) {
        return randBool() ? x : y;
    }
    
    function fun2<T, U>(x: T, y: U) {
        return randBool() ? x : y;
    }
    
    function fun3<T>(...args: T[]): T {
        return args[+randBool()];
    }
    
    namespace n1 {
        // The following should all come back as strings.
        // They should be assignable to/from something of a type 'string'.
        // They should not be assignable to either "Hello" or "World".
        export let a = fun1("Hello", "World");
        export let b = fun1("Hello", "Hello");
        export let c = fun2("Hello", "World");
        export let d = fun2("Hello", "Hello");
        export let e = fun3("Hello", "Hello", "World", "Foo");
    
        // Should be valid
        a = takeReturnString(a);
        b = takeReturnString(b);
        c = takeReturnString(c);
        d = takeReturnString(d);
        e = takeReturnString(e);
        
        // Passing these as arguments should cause an error.
        a = takeReturnHello(a);
                            ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
        b = takeReturnHello(b);
                            ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
        c = takeReturnHello(c);
                            ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
        d = takeReturnHello(d);
                            ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
        e = takeReturnHello(e);
                            ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello"'.
    
        // Passing these as arguments should cause an error.
        a = takeReturnHelloWorld(a);
                                 ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'string' is not assignable to type '"World"'.
        b = takeReturnHelloWorld(b);
                                 ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'string' is not assignable to type '"World"'.
        c = takeReturnHelloWorld(c);
                                 ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'string' is not assignable to type '"World"'.
        d = takeReturnHelloWorld(d);
                                 ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'string' is not assignable to type '"World"'.
        e = takeReturnHelloWorld(e);
                                 ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'string' is not assignable to type '"World"'.
    }
    
    namespace n2 {
        // The following (regardless of errors) should come back typed
        // as "Hello" (or "Hello" | "Hello").
        export let a = fun1<"Hello">("Hello", "Hello");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T>(x: T, y: T) => T' and 'string'.
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
        export let b = fun1<"Hello">("Hello", "World");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T>(x: T, y: T) => T' and 'string'.
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
        export let c = fun2<"Hello", "Hello">("Hello", "Hello");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
                                     ~~~~~~~
!!! error TS1134: Variable declaration expected.
        export let d = fun2<"Hello", "Hello">("Hello", "World");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
                                     ~~~~~~~
!!! error TS1134: Variable declaration expected.
        export let e = fun3<"Hello">("Hello", "World");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T>(...args: T[]) => T' and 'string'.
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
    
        // Assignment from the returned value should cause an error.
        a = takeReturnString(a);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
        b = takeReturnString(b);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
        c = takeReturnString(c);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
        d = takeReturnString(d);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
        e = takeReturnString(e);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
    
        // Should be valid
        a = takeReturnHello(a);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
        b = takeReturnHello(b);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
        c = takeReturnHello(c);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
        d = takeReturnHello(d);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
        e = takeReturnHello(e);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
    
        // Assignment from the returned value should cause an error.
        a = takeReturnHelloWorld(a);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
        b = takeReturnHelloWorld(b);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
        c = takeReturnHelloWorld(c);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
        d = takeReturnHelloWorld(d);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
        e = takeReturnHelloWorld(e);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
    }
    
    
    namespace n3 {
        // The following (regardless of errors) should come back typed
        // as "Hello" | "World" (or "World" | "Hello").
        export let a = fun2<"Hello", "World">("Hello", "World");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
                                     ~~~~~~~
!!! error TS1134: Variable declaration expected.
        export let b = fun2<"Hello", "World">("World", "Hello");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
                                     ~~~~~~~
!!! error TS1134: Variable declaration expected.
        export let c = fun2<"World", "Hello">("Hello", "Hello");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
                                     ~~~~~~~
!!! error TS1134: Variable declaration expected.
        export let d = fun2<"World", "Hello">("World", "World");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T, U>(x: T, y: U) => T | U' and 'string'.
                                     ~~~~~~~
!!! error TS1134: Variable declaration expected.
        export let e = fun3<"Hello" | "World">("Hello", "World");
                       ~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T>(...args: T[]) => T' and 'string'.
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2447: The '|' operator is not allowed for boolean types. Consider using '||' instead.
    
        // Assignment from the returned value should cause an error.
        a = takeReturnString(a);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
        b = takeReturnString(b);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
        c = takeReturnString(c);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
        d = takeReturnString(d);
                             ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
        e = takeReturnString(e);
                             ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    
        // Passing these as arguments should cause an error.
        a = takeReturnHello(a);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
        b = takeReturnHello(b);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
        c = takeReturnHello(c);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
        d = takeReturnHello(d);
                            ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello"'.
        e = takeReturnHello(e);
                            ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type '"Hello"'.
    
        // Both should be valid.
        a = takeReturnHelloWorld(a);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
        b = takeReturnHelloWorld(b);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
        c = takeReturnHelloWorld(c);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
        d = takeReturnHelloWorld(d);
                                 ~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'boolean' is not assignable to type '"World"'.
        e = takeReturnHelloWorld(e);
                                 ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type '"Hello" | "World"'.
!!! error TS2345:   Type 'number' is not assignable to type '"World"'.
    }